--- a/Assets/css/contact_style.css
+++ b/Assets/css/contact_style.css
@@ -38,6 +38,12 @@ body {
 
 .links-container {
     margin-left: 70%;
+    float: right;
+    background-color: whitesmoke;
+    padding: 5px;
+    border-style: solid;
+    border-width: 1px;
+    font-family: 'Trade Winds';
 }
 
 .me {
@@ -69,3 +75,13 @@ form .field input,textarea {
     text-decoration: none;
     border: none;
 }
+
+footer {
+    background-color: teal;
+    height: 35px;
+    width: 90px;
+    padding: 15px;
+    font-family: 'Oxanium';
+    border-radius: 8px;
+}
+
