--- a/Assets/css/portfolio_style.css
+++ b/Assets/css/portfolio_style.css
@@ -21,6 +21,12 @@ body {
 
 .links-container {
     margin-left: 70%;
+    float: right;
+    background-color: whitesmoke;
+    padding: 5px;
+    border-style: solid;
+    border-width: 1px;
+    font-family: 'Trade Winds';
 }
 
 .me {
@@ -41,10 +47,10 @@ body {
 #box {
     background-color: whitesmoke;
     width: 700px;
-    height: 490px;
+    height: 1130px;
     margin: 10px 10px 30px 100px;
     color: black;
-    padding: 25px 30px 10px;
+    padding: 15px 30px 10px;
     border-style: solid;
     border-width: 2px;
     border-color: black;
@@ -99,3 +105,13 @@ body {
 p {
     background-color: teal;
 }
+
+footer {
+    background-color: teal;
+    height: 35px;
+    width: 90px;
+    padding: 15px;
+    font-family: 'Oxanium';
+    border-radius: 8px;
+}
+
