--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -13,6 +13,12 @@
 
 .links-container {
     margin-left: 70%;
+    float: right;
+    background-color: whitesmoke;
+    padding: 5px;
+    border-style: solid;
+    border-width: 1px;
+    font-family: 'Trade Winds';
 }
 
 .me {
@@ -65,3 +71,13 @@ div:hover {
 div:visited {
     color: #f33c3c
 }
+
+footer {
+    background-color: teal;
+    height: 35px;
+    width: 90px;
+    padding: 15px;
+    font-family: 'Oxanium';
+    border-radius: 8px;
+}
+
