--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -81,3 +81,14 @@ footer {
     border-radius: 8px;
 }
 
+@media only screen and (max-width: 768px) and (min-width: 640px) {
+    header {font-size: 25px;
+    }
+    #box {font-size: 18px;}
+}
+
+@media only screen and (max-width: 640px) and (min-width: 620px) {
+    header {font-size: 20px;
+    }
+    #box {font-size: 15px;}
+}
